# project3

project3/: Album.cpp  Album.hpp  Artist.cpp  Artist.hpp  Artists.cpp  Artists.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  JSONParser.cpp  JSONParser.hpp  JSONToken.cpp  JSONToken.hpp  JSONTokenizer.cpp  JSONTokenizer.hpp  Pair.cpp  Pair.hpp  Track.cpp  Track.hpp  artists.json
